fix(Header): Needed z-index added.

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -1,6 +1,7 @@
 header {
   width: 100%;
   position: fixed;
+  z-index: 10;
 }
 
 main {
